adjusted spacing issue on about page

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -607,7 +607,7 @@ ul.project-preview {
   display: flex;
   margin: 0;
   padding: 0;
-  margin-bottom: 20%;
+  //margin-bottom: 20%;
   //background-color: bisque;
   align-items: center;
   li {
